...
      selectedIcon: Icon(Icons.home),
      label: 'Home',
    ),
    NavigationDestination(
      icon: Icon(Icons.bloodtype_outlined),
      selectedIcon: Icon(Icons.bloodtype),
      label: 'Find Blood',
    ),
    NavigationDestination(
      icon: Icon(Icons.local_hospital_outlined),
      selectedIcon: Icon(Icons.local_hospital),
      label: 'Hospitals',
    ),
...
      selectedIcon: Icon(Icons.water_drop),
      label: 'Blood Banks',
    ),
    NavigationDestination(
      icon: Icon(Icons.person_outline),
      selectedIcon: Icon(Icons.person),
      label: 'Profile',
    ),
  ];

  static const List<Widget> _screens = [
    HomeScreen(),
    FindBloodScreen(),
...
